fix up module build

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,13 +1,34 @@
-cmake_minimum_required(VERSION 3.20)
-project(snmp)
+if (CONFIG_LIB_SNMP)
+zephyr_library()
+zephyr_include_directories(include)
+zephyr_library_sources(
+  src/snmp_asn1.c
+  src/snmp_asn1.h
+  src/snmp_core.c
+  src/snmp_core_priv.h
+  src/snmp_mib2.c
+  src/snmp_mib2_icmp.c
+  src/snmp_mib2_interfaces.c
+  src/snmp_mib2_ip.c
+  src/snmp_mib2_snmp.c
+  src/snmp_mib2_system.c
+  src/snmp_mib2_tcp.c
+  src/snmp_mib2_udp.c
+  src/snmp_msg.c
+  src/snmp_msg.h
+  src/snmp_netconn.c
+  src/snmp_pbuf_stream.c
+  src/snmp_pbuf_stream.h
+  src/snmp_raw.c
+  src/snmp_scalar.c
+  src/snmp_snmpv2_framework.c
+  src/snmp_snmpv2_usm.c
+  src/snmp_table.c
+  src/snmp_threadsync.c
+  src/snmp_traps.c
+  src/snmpv3.c
+  src/snmpv3_mbedtls.c
+  src/snmpv3_priv.h
+)
 
-add_library(snmp)
-target_compile_options(snmp PRIVATE -Wall -Wextra)
-set_target_properties(snmp PROPERTIES C_STANDARD 11)
-
-target_include_directories(snmp PUBLIC include)
-add_subdirectory(src)
-
-file(CONFIGURE OUTPUT .gitignore
-  NEWLINE_STYLE UNIX
-  CONTENT "*")
+endif (CONFIG_LIB_SNMP)
